# SayItSeeIt

./: LICENSE  README.md
LayoutGenerator/: .env.pub  .gitignore  LayoutGenerator.py  README.md  api_server.py  app.py  doc.md  layoutgenerator.py  main.py  pyproject.toml
LayoutGenerator/dataset/: prompt.txt
LayoutGenerator/dataset/cardnews/processed/text/: train.pt
LayoutGenerator/dataset/cardnews/raw/: train.json
LayoutGenerator/replace_bg/: utilities.py
LayoutGenerator/replace_bg/model/: controlnet.py  pipeline_controlnet_sd_xl.py
LayoutGenerator/src/: generator.py  parsing.py  preprocess.py  ranker.py  selection.py  serialization.py  utilities.py  visualization.py
LayoutGenerator/src/generators/: copy_generator.py  layout_generator.py  openai_client.py
say_it_see_it_web/: README.md  pubspec.yaml
say_it_see_it_web/android/app/: build.gradle.kts
say_it_see_it_web/android/app/src/main/: AndroidManifest.xml
say_it_see_it_web/ios/Runner/: Info.plist
say_it_see_it_web/ios/Runner.xcodeproj/: project.pbxproj
say_it_see_it_web/lib/: main.dart
say_it_see_it_web/lib/pages/: example_section.dart  home_page.dart
say_it_see_it_web/lib/services/: api_service.dart
say_it_see_it_web/linux/: CMakeLists.txt
say_it_see_it_web/linux/runner/: my_application.cc
say_it_see_it_web/macos/Runner.xcodeproj/: project.pbxproj
say_it_see_it_web/macos/Runner/Configs/: AppInfo.xcconfig
say_it_see_it_web/web/: index.html  manifest.json
say_it_see_it_web/windows/: CMakeLists.txt
say_it_see_it_web/windows/runner/: Runner.rc  main.cpp
(+2 files in other folders)
